--- a/src/scss/mixt/_mixins.scss
+++ b/src/scss/mixt/_mixins.scss
@@ -27,3 +27,15 @@
 		src: url("../assets/fonts/Public_Sans/" + $url);
 	}
 }
+
+@keyframes fadeBox {
+	0% {
+		// transform: translateY(-130px) rotate(-6deg);
+		transform: translate(-50%, 130px);
+		opacity: 0;
+	}
+	100% {
+		transform: translate(-50%, 0);
+		opacity: 1;
+	}
+}
