--- a/src/components/Pages/About/Timeline/Timeline.scss
+++ b/src/components/Pages/About/Timeline/Timeline.scss
@@ -5,7 +5,7 @@
     grid-column: 1 / 23;
 
     .line {
-        height: 2645px; // 2400
+        height: 2200px; // 2400
         width: 1px;
         // background-color: $bleu;
         background-color: $grey;
@@ -35,7 +35,7 @@
     // 2400 - (30*2) + 30 / 9 ~= 264
     @for $i from 0 through 15 {
         .r#{$i} {
-            top: 0px + (264 * ($i - 1));
+            top: 0px + (218 * ($i - 1));
 
             &::before {
                 content: "";
@@ -55,7 +55,7 @@
 
     .box {
         width: 400px;
-        min-height: 200px;
+        // min-height: 200px;
         padding: 20px;
         border-radius: 3px;
         height: auto;
@@ -80,17 +80,62 @@
         .entreprise {
             margin-top: 10px;
         }
+
+        .divLogo {
+            width: 100%;
+            height: 100%;
+            background-color: #fff;
+            position: absolute;
+            top: 0;
+            left: 0;
+            opacity: 0;
+            transition: all 0.5s;
+
+            .logo {
+                width: 100px;
+                height: auto;
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                right: 0;
+                left: 0;
+                margin: auto;
+                opacity: 0;
+                transition: all 0.5s;
+            }
+        }
+
+        &:hover {
+            .divLogo {
+                opacity: 1;
+
+                .logo {
+                    opacity: 1;
+                }
+            }
+        }
     }
 
     @for $i from 0 through 15 {
         .b#{$i} {
-            top: 0px + (264 * ($i - 1));
+            top: 0px + (218 * ($i - 1));
 
             @include media(">=laptop") {
                 .date {
                     position: absolute;
                     margin-top: -13px;
                     width: 80px;
+
+                    &::before {
+                        content: "";
+                        position: absolute;
+                        width: 30px;
+                        height: 1px;
+                        background-color: $primary;
+                        top: 0;
+                        bottom: 0;
+                        margin: auto;
+                    }
                 }
 
                 @if ($i % 2 == 1) {
@@ -99,6 +144,10 @@
                     .date {
                         right: calc(50% - 420px); // 415 ?
                         text-align: left;
+
+                        &::before {
+                            left: -47px;
+                        }
                     }
                 } @else {
                     left: calc(50% + 270px);
@@ -106,6 +155,10 @@
                     .date {
                         left: calc(50% - 420px);
                         text-align: right;
+
+                        &::before {
+                            right: -47px;
+                        }
                     }
                 }
             }
