--- a/src/components/Pages/Competence/Competence.scss
+++ b/src/components/Pages/Competence/Competence.scss
@@ -4,43 +4,23 @@
     transition: transform 0.5s ease-out;
     grid-template-rows: min-content;
     background-color: #fff;
-    padding: 90px;
+    padding: 180px 90px 90px;
     @include gridLayout;
     max-width: initial;
 
-    h1 {
-        grid-row: 1;
-        grid-column: 1 / 23;
-        font-family: "Playfair Display SC";
-        letter-spacing: 3.29px;
-        text-transform: uppercase;
-        font-size: 45px;
-        text-align: center;
-        margin: 140px 0;
-        // line-height: 127px;
-        // max-width: min-content;
-        // position: absolute;
-        // height: fit-content;
-        // margin: auto;
-        // left: 0;
-        // right: 0;
-        // top: 0;
-        // bottom: 0;
-
-        // &::before {
-        //     content: "";
-        //     position: absolute;
-        //     height: 100px;
-        //     width: 100%;
-        //     background: linear-gradient($tertiaire, #fff);
-        //     margin: auto;
-        //     left: 0;
-        //     top: 0;
-        // }
-    }
+    // h1 {
+    //     grid-row: 1;
+    //     grid-column: 1 / 23;
+    //     font-family: "Playfair Display SC";
+    //     letter-spacing: 3.29px;
+    //     text-transform: uppercase;
+    //     font-size: 45px;
+    //     text-align: center;
+    //     margin: 140px 0;
+    // }
 
     .skillDiv {
-        margin-bottom: 50px;
+        margin-bottom: 30px;
     }
 
     .skill {
@@ -68,7 +48,6 @@
         }
 
         h2 {
-            text-transform: uppercase;
             font-size: 24px;
             letter-spacing: 1.29px;
             margin: 20px 0;
@@ -80,12 +59,11 @@
         }
 
         .skillBar {
-            height: 25px;
+            height: 5px;
             width: 100%;
-            background-color: #fff;
+            background-color: $tertiaire;
             margin-bottom: 20px;
             border-radius: 2px;
-            box-shadow: inset 0 1px 2px $secondary;
 
             .progress1,
             .progress2,
@@ -93,15 +71,21 @@
             .progress4 {
                 height: 100%;
                 border-radius: 2px 0px 0px 2px;
-                background-color: $secondary;
+
+                div {
+                    height: 100%;
+                    width: 100%;
+                    background-color: $secondary;
+                    animation-duration: 1.5s;
+                }
             }
 
             .progress1 {
-                width: 80%;
+                width: 65%;
             }
 
             .progress2 {
-                width: 85%;
+                width: 75%;
             }
 
             .progress3 {
@@ -129,10 +113,27 @@
             margin: 20px 0;
         }
 
-        p {
-            margin: 5px 0;
-            font-size: 18px;
-            color: $grey2;
+        ul {
+            padding-left: 40px;
+
+            li {
+                margin: 10px 0;
+                font-size: 18px;
+                color: $grey2;
+                position: relative;
+
+                &::before {
+                    content: "";
+                    position: absolute;
+                    width: 10px;
+                    height: 1px;
+                    background-color: $secondary;
+                    left: -30px;
+                    top: 0;
+                    bottom: 0;
+                    margin: auto;
+                }
+            }
         }
     }
 }
