--- a/src/scss/mixt/_keyframes.scss
+++ b/src/scss/mixt/_keyframes.scss
@@ -32,3 +32,12 @@
         opacity: 1;
     }
 }
+
+@keyframes barProgress {
+    0% {
+        width: 0%;
+    }
+    100% {
+        width: 100%;
+    }
+}
