--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -38,6 +38,40 @@ html {
 body {
 	font-family: "Public Sans - Thin _ Regular";
 	cursor: none;
+
+	.titleGroup {
+		grid-row: 1;
+		grid-column: 1 / 23;
+		position: relative;
+		text-align: center;
+		align-self: center;
+		margin-bottom: 200px;
+
+		.title {
+			font-family: "Playfair Display SC";
+			letter-spacing: 0.4em;
+			text-transform: uppercase;
+			font-size: 143px;
+			// max-width: min-content;
+			height: min-content;
+			position: absolute;
+			margin: auto;
+			left: 0;
+			right: 0;
+			top: 0;
+			bottom: 20px;
+			color: #ebebec;
+			z-index: -1;
+		}
+
+		.title2 {
+			// font-family: "Playfair Display SC";
+			letter-spacing: 10px;
+			text-transform: uppercase;
+			font-size: 45px;
+			// margin: 100px 0;
+		}
+	}
 }
 
 ::selection {
