change title, change background color section, add section vignetteresponsive

--- a/src/components/Pages/Intro/Intro.scss
+++ b/src/components/Pages/Intro/Intro.scss
@@ -41,7 +41,11 @@
 
         .seconde {
             animation: 2s fadeTitle2;
-            text-align: right;
+            margin-left: 100px;
+        }
+
+        .third {
+            text-align: center;
         }
     }
 
