--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -92,3 +92,4 @@ body {
 @import "../components/Pages/Projects/Projects.scss";
 @import "../components/Pages/Contact/Contact.scss";
 @import "../components/Pages/About/About.scss";
+@import "../components/Pages/VignetteResponsive/VignetteResponsive.scss";
