--- a/src/components/Pages/Projects/Realisations/Realisations.scss
+++ b/src/components/Pages/Projects/Realisations/Realisations.scss
@@ -1,20 +1,17 @@
 .realisations {
     grid-row: 2;
     grid-column: 1/ 23;
-    // display: grid;
-    // grid-template-columns: repeat(3, 1fr);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     grid-gap: 26px;
-    margin: 30px 0;
+    margin: 30px auto;
+    max-width: 1475px;
 
     li {
-        // padding: 10px;
-
         figure {
             width: 400px;
-            background-color: #ebebec;
+            background-color: $tertiaire;
             overflow: hidden;
             position: relative;
 
@@ -24,8 +21,6 @@
             &:hover {
                 img {
                     transform: scale(1.6) translate(35px, 23px);
-                    // margin-left: 57px;
-                    // margin-top: 36px;
                 }
 
                 figcaption {
