ajustement animation et parallax

--- a/src/components/Pages/About/About.scss
+++ b/src/components/Pages/About/About.scss
@@ -2,6 +2,7 @@
     position: relative;
     transition: transform 0.5s ease-out;
     // padding: 90px;
+    margin-bottom: -225px;
     @include gridLayout;
 
     @import "./Timeline/Timeline.scss";
