--- a/src/components/Pages/Competence/Competence.scss
+++ b/src/components/Pages/Competence/Competence.scss
@@ -7,16 +7,9 @@
     @include gridLayout;
     max-width: initial;
 
-    // h1 {
-    //     grid-row: 1;
-    //     grid-column: 1 / 23;
-    //     font-family: "Playfair Display SC";
-    //     letter-spacing: 3.29px;
-    //     text-transform: uppercase;
-    //     font-size: 45px;
-    //     text-align: center;
-    //     margin: 140px 0;
-    // }
+    .titleGroup {
+        margin-bottom: 250px;
+    }
 
     .skillDiv {
         margin-bottom: 30px;
@@ -60,7 +53,7 @@
         .skillBar {
             height: 5px;
             width: 100%;
-            background-color: $tertiaire;
+            background-color: #fff;
             margin-bottom: 20px;
             border-radius: 2px;
 
