responsive for tablet

--- a/src/components/Mouse/Mouse.scss
+++ b/src/components/Mouse/Mouse.scss
@@ -3,6 +3,10 @@
     position: fixed;
     pointer-events: none;
     z-index: 100;
+
+    @include media("<laptop") {
+        display: none;
+    }
 }
 
 .point {
