--- a/src/components/Pages/VignetteResponsive/VignetteResponsive.scss
+++ b/src/components/Pages/VignetteResponsive/VignetteResponsive.scss
@@ -23,6 +23,10 @@
 
         img {
             margin: 0 auto -40px;
+
+            @include media("<=tablet") {
+                height: 300px;
+            }
         }
     }
 }
