--- a/src/components/Pages/About/Timeline/Timeline.scss
+++ b/src/components/Pages/About/Timeline/Timeline.scss
@@ -55,7 +55,6 @@
 
     .box {
         width: 400px;
-        // min-height: 200px;
         padding: 20px;
         border-radius: 3px;
         height: auto;
@@ -69,12 +68,12 @@
 
         @include media("<laptop") {
             left: calc(50% - 50px);
+            padding: 10px 15px 15px;
         }
 
         .title {
             font-size: 20px;
             line-height: 29px;
-            // font-family: "Playfair Display SC";
         }
 
         .entreprise {
@@ -111,6 +110,27 @@
 
                 .logo {
                     opacity: 1;
+                }
+            }
+        }
+
+        .date {
+            font-style: italic;
+
+            @include media("<laptop") {
+                text-align: right;
+                position: relative;
+
+                &::before {
+                    content: "";
+                    position: absolute;
+                    width: 25px;
+                    height: 1px;
+                    background-color: $primary;
+                    top: -1px;
+                    bottom: 0;
+                    margin: auto;
+                    right: -49px;
                 }
             }
         }
