--- a/src/components/Pages/Contact/Contact.scss
+++ b/src/components/Pages/Contact/Contact.scss
@@ -17,5 +17,9 @@
         right: 0;
         top: 0;
         bottom: 0;
+
+        @include media("<=tablet") {
+            font-size: 50px;
+        }
     }
 }
