--- a/src/components/Pages/Intro/Intro.scss
+++ b/src/components/Pages/Intro/Intro.scss
@@ -31,6 +31,11 @@
             line-height: 90px;
         }
 
+        @include media("<=tablet") {
+            font-size: 80px;
+            line-height: 80px;
+        }
+
         div {
             overflow: hidden;
         }
@@ -59,6 +64,11 @@
         padding-top: 40px;
         margin: 0 auto;
         width: 1050px;
+
+        @include media("<=tablet") {
+            font-size: 18px;
+            padding-top: 50px;
+        }
     }
 
     .blend {
