--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -47,6 +47,10 @@ body {
 		align-self: center;
 		margin-bottom: 200px;
 
+		@include media("<laptop") {
+			margin-bottom: 140px;
+		}
+
 		.title {
 			font-family: "Playfair Display SC";
 			letter-spacing: 0.4em;
@@ -62,14 +66,31 @@ body {
 			bottom: 20px;
 			color: #ebebec;
 			z-index: -1;
+
+			@include media("<laptopM") {
+				font-size: 100px;
+				letter-spacing: 0.3em;
+			}
+
+			@include media("<laptop") {
+				font-size: 80px;
+			}
 		}
 
 		.title2 {
-			// font-family: "Playfair Display SC";
 			letter-spacing: 10px;
 			text-transform: uppercase;
 			font-size: 45px;
-			// margin: 100px 0;
+
+			@include media("<laptopM") {
+				font-size: 30px;
+				letter-spacing: 0.2em;
+			}
+
+			@include media("<=tablet") {
+				font-size: 22px;
+				letter-spacing: 0.13em;
+			}
 		}
 	}
 }
