--- a/src/components/BtnMenu/BtnMenu.scss
+++ b/src/components/BtnMenu/BtnMenu.scss
@@ -11,6 +11,11 @@
     z-index: 4;
     box-shadow: 0px 0px 10px 1px #eaeaea;
 
+    @include media("<mobileL") {
+        width: 50px;
+        height: 50px;
+    }
+
     .burgerline {
         width: 30px;
         height: 2px;
@@ -20,6 +25,12 @@
         background: linear-gradient(to left, $primary, #fff, $primary) right;
         background-size: 200%;
         transition: all 0.2s ease-out;
+
+        @include media("<mobileL") {
+            width: 20px;
+            height: 1px;
+            margin: 2px 0;
+        }
 
         &:nth-child(2) {
             transition-delay: 0.05s;
@@ -38,12 +49,20 @@
         width: 40px;
         transform: rotate(42deg);
         position: absolute;
+
+        @include media("<mobileL") {
+            width: 30px;
+        }
     }
 
     .isOpen3 {
         width: 40px;
         transform: rotate(-42deg);
         position: absolute;
+
+        @include media("<mobileL") {
+            width: 30px;
+        }
     }
 
     &:hover {
