--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -11,7 +11,7 @@
         // position: fixed;
         // left: 15px;
         // top: 15px;
-        // z-index: 99;
+        z-index: 99;
         grid-row: 1;
         grid-column: 1;
 
@@ -19,6 +19,11 @@
             fill: $primary;
             width: 50px;
             height: auto;
+
+            @include media("<mobileL") {
+                width: 35px;
+                margin: auto 0;
+            }
         }
     }
     .burger {
