--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -6,9 +6,13 @@
     height: 100vh;
     background-color: #fff;
     padding: 130px 100px 90px;
-    transform: translateX(440px);
+    transform: translateX(540px);
     transition: transform 1.5s;
     box-shadow: -1px 0px 10px $beige2;
+
+    @include media("<mobileXL") {
+        width: 100%;
+    }
 
     .nav {
         height: 100%;
