--- a/src/components/Pages/VignetteResponsive/VignetteResponsive.scss
+++ b/src/components/Pages/VignetteResponsive/VignetteResponsive.scss
@@ -10,12 +10,23 @@
         font-size: 42px;
         margin-bottom: 30px;
         text-align: center;
+        font-weight: bold;
+
+        @include media("<mobileL") {
+            font-size: 22px;
+            line-height: 30px;
+        }
     }
 
     h2 {
         font-family: "Public Sans - Thin _ Regular";
         font-size: 22px;
         text-align: center;
+
+        @include media("<mobileL") {
+            font-size: 18px;
+            line-height: 22px;
+        }
     }
 
     div {
@@ -26,6 +37,10 @@
 
             @include media("<=tablet") {
                 height: 300px;
+            }
+
+            @include media("<mobileXL") {
+                height: 170px;
             }
         }
     }
