integration partie contact

--- a/src/components/Pages/Contact/Contact.scss
+++ b/src/components/Pages/Contact/Contact.scss
@@ -1,7 +1,10 @@
 .contact {
-    height: 100vh;
+    // height: 100vh;
     position: relative;
     transition: transform 0.5s ease-out;
+    padding-top: 200px;
+    padding-bottom: 90px;
+    @include gridLayout;
 
     h1 {
         font-family: "Playfair Display SC";
@@ -20,6 +23,75 @@
 
         @include media("<=tablet") {
             font-size: 50px;
+        }
+    }
+
+    form {
+        grid-row: 2;
+        grid-column: 6 / 18;
+
+        .input-field {
+            margin-bottom: 20px;
+            display: flex;
+            transition: all 0.3s;
+
+            .required {
+                display: flex;
+                align-items: center;
+                padding: 6px 12px;
+                font-size: 14px;
+                font-weight: normal;
+                line-height: 1;
+                color: #fff;
+                text-align: center;
+                background-color: $primary;
+            }
+
+            input,
+            textarea {
+                background-color: #fff;
+                height: 40px;
+                border: 1px solid #e6e6e6;
+                width: 100%;
+                padding: 0 15px;
+            }
+
+            textarea {
+                height: 150px;
+                padding: 10px 15px;
+            }
+        }
+
+        .alerte {
+            color: #b94a48;
+            background-color: #f2dede;
+            border-color: #ebccd1;
+            padding: 10px;
+            margin-bottom: 20px;
+            margin-top: -10px;
+            transition: all 0.3s;
+        }
+
+        label {
+            position: absolute;
+            width: 1px;
+            height: 1px;
+            padding: 0;
+            margin: -1px;
+            overflow: hidden;
+        }
+
+        .send {
+            background-color: $secondary;
+            color: #fff;
+            padding: 13px 20px;
+            text-transform: uppercase;
+            letter-spacing: 0.15em;
+            transition: all 0.3s;
+
+            &:hover {
+                background-color: $primary;
+            }
         }
     }
 }
