--- a/src/scss/mixt/_variables.scss
+++ b/src/scss/mixt/_variables.scss
@@ -1,6 +1,7 @@
 // Colors
 $primary: #383c3c;
-$secondary: #8a0000;
+$secondary: #b61313;
+// $secondary: #e74c3c;
 $tertiaire: #f5f5f5;
 
 $beige: #f7f5f4;
