--- a/src/scss/mixt/_keyframes.scss
+++ b/src/scss/mixt/_keyframes.scss
@@ -41,3 +41,14 @@
         width: 100%;
     }
 }
+
+@keyframes fadeInUpValidate {
+    0% {
+        opacity: 0;
+        transform: translateY(50px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
