--- a/src/components/Pages/Contact/Contact.scss
+++ b/src/components/Pages/Contact/Contact.scss
@@ -30,6 +30,14 @@
         grid-row: 2;
         grid-column: 6 / 18;
 
+        @include media("<laptop") {
+            grid-column: 3 / 21;
+        }
+
+        @include media("<mobileL") {
+            grid-column: 1 / 23;
+        }
+
         .input-field {
             margin-bottom: 20px;
             display: flex;
