--- a/src/components/Pages/Intro/Intro.scss
+++ b/src/components/Pages/Intro/Intro.scss
@@ -117,4 +117,72 @@
             height: 160px;
         }
     }
+
+    .callToScroll {
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 50px;
+        width: 200px;
+        margin: auto;
+        font-size: 11px;
+        letter-spacing: 0.45em;
+        line-height: 5.7;
+        text-align: center;
+        text-transform: uppercase;
+        z-index: 3;
+
+        .button {
+            display: block;
+            position: relative;
+            width: 50px;
+            height: 110px;
+            margin: auto;
+            border-radius: 50px;
+            background-color: $primary;
+
+            &::before,
+            &::after {
+                content: "";
+                position: absolute;
+                left: 0;
+                right: 0;
+                width: 7px;
+                height: 7px;
+                margin: auto;
+                border-radius: 50%;
+                background-color: #fff;
+                -webkit-animation: ctsCircle 2s -0.1s infinite backwards;
+                animation: ctsCircle 2s -0.1s infinite backwards;
+            }
+
+            &::before {
+                top: 20px;
+            }
+
+            &::after {
+                bottom: 20px;
+                -webkit-animation-delay: 0.7s;
+                animation-delay: 0.7s;
+            }
+
+            span {
+                position: absolute;
+                top: 20px;
+                left: 0;
+                right: 0;
+                bottom: 20px;
+                margin: auto;
+                width: 1px;
+                background-color: #fff;
+                -webkit-animation: ctsLine 2s infinite;
+                animation: ctsLine 2s infinite;
+            }
+        }
+    }
+    // @media (max-width: 767px) {
+    //     .callToScroll {
+    //         bottom: 0;
+    //     }
+    // }
 }
