--- a/src/scss/mixt/_keyframes.scss
+++ b/src/scss/mixt/_keyframes.scss
@@ -52,3 +52,32 @@
         transform: translateY(0px);
     }
 }
+
+@keyframes ctsLine {
+    0% {
+        transform: translateY(-50%) scaleY(0);
+        -webkit-animation-timing-function: ease-in;
+        animation-timing-function: ease-in;
+    }
+    30% {
+        transform: translateY(0%) scaleY(0.5);
+        -webkit-animation-timing-function: ease-out;
+        animation-timing-function: ease-out;
+    }
+    60%,
+    100% {
+        transform: translateY(50%) scaleY(0);
+    }
+}
+
+@keyframes ctsCircle {
+    0%,
+    40%,
+    100% {
+        transform: scale(0);
+    }
+    15%,
+    25% {
+        transform: scale(1);
+    }
+}
