fonctionnalite header class active en fonction de la section

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -133,6 +133,14 @@
                     }
                 }
             }
+
+            .active {
+                a {
+                    &::before {
+                        transform: translateY(100%);
+                    }
+                }
+            }
         }
     }
 
