--- a/src/components/Pages/About/About.scss
+++ b/src/components/Pages/About/About.scss
@@ -1,7 +1,7 @@
 .about {
     position: relative;
     transition: transform 0.5s ease-out;
-    margin-bottom: -225px;
+    // margin-bottom: -225px;
     @include gridLayout;
 
     @include media("<laptopM") {
