--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -8,7 +8,7 @@
     box-shadow: 0px 0px 5px $beige2;
     // mix-blend-mode: exclusion;
 
-    @include media("<=tablet") {
+    @include media("<laptop") {
         background-color: transparent;
         box-shadow: initial;
         padding: 10px;
@@ -24,7 +24,7 @@
         // padding-left: $gridMargin;
         // padding-right: $gridMargin;
 
-        @include media("<=tablet") {
+        @include media("<laptop") {
             padding-left: 0px;
             padding-right: 0px;
         }
@@ -37,7 +37,7 @@
             text-align: center;
             align-self: center;
 
-            @include media("<=tablet") {
+            @include media("<laptop") {
                 padding: 0;
             }
 
@@ -64,7 +64,7 @@
             display: flex;
             // justify-content: center;
 
-            @include media("<=tablet") {
+            @include media("<laptop") {
                 display: none;
             }
 
@@ -90,7 +90,7 @@
                     height: 93px;
                     overflow: hidden;
 
-                    @include media("<=tablet") {
+                    @include media("<laptop") {
                         font-size: 14px;
                     }
 
@@ -146,7 +146,7 @@
 
     .burger,
     .menu {
-        @include media(">tablet") {
+        @include media(">laptop") {
             display: none;
         }
     }
