add btn scrollTop style roulette

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -144,6 +144,44 @@
         }
     }
 
+    .scrollTop {
+        position: fixed;
+        bottom: 0;
+        right: 0;
+        transform: translateY(100%);
+        transition: transform 0.5s;
+
+        div {
+            width: 32px;
+            height: 55px;
+            border: 10px solid $primary;
+            border-radius: 20px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            overflow: hidden;
+            margin: 20px;
+
+            span {
+                height: 3px;
+                width: 100%;
+                background-color: $primary;
+                transform: translateY(-3px);
+                animation: 0.2s linear infinite scrollTop;
+            }
+        }
+
+        @keyframes scrollTop {
+            0% {
+                transform: translateY(6px);
+            }
+            100% {
+                // transform: translateY(365%);
+                transform: translateY(-5px);
+            }
+        }
+    }
+
     .burger,
     .menu {
         @include media(">laptop") {
