--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -151,6 +151,10 @@
         transform: translateY(100%);
         transition: transform 0.5s;
 
+        @include media("<laptop") {
+            display: none;
+        }
+
         div {
             width: 32px;
             height: 55px;
