--- a/src/components/Pages/Projects/Realisations/Realisations.scss
+++ b/src/components/Pages/Projects/Realisations/Realisations.scss
@@ -136,3 +136,99 @@
         }
     }
 }
+
+.realisationsTest {
+    grid-row: 2;
+    grid-column: 1/ 23;
+
+    li {
+        display: flex;
+        height: 90vh;
+        padding-top: 100px;
+
+        @include media("<laptop") {
+            flex-direction: column-reverse;
+            padding: 0;
+            height: auto;
+            margin-bottom: 50px;
+        }
+
+        .ProjectThumbnail_text {
+            width: 30%;
+
+            @include media("<laptop") {
+                width: 100%;
+                margin-top: 20px;
+            }
+
+            h1 {
+                color: $secondary;
+                font-size: 40px;
+
+                @include media("<laptop") {
+                    font-size: 26px;
+                }
+            }
+
+            h3 {
+                color: $grey2;
+                margin-top: 5px;
+            }
+
+            p {
+                margin: 50px 0;
+                font-size: 20px;
+                line-height: 1.5;
+
+                @include media("<laptop") {
+                    font-size: 16px;
+                    margin-top: 25px;
+                }
+            }
+
+            a {
+                margin: 25px 0;
+                display: block;
+                position: relative;
+                padding: 10px;
+                width: max-content;
+                overflow: hidden;
+
+                &::before {
+                    content: "";
+                    position: absolute;
+                    left: -20px;
+                    top: -30px;
+                    width: 30px;
+                    width: 30px;
+                    height: 300%;
+                    background-color: $beige2;
+                    transition: all 0.5s;
+                    transform: rotate(35deg);
+                    mix-blend-mode: exclusion;
+                }
+
+                &:hover {
+                    &::before {
+                        left: 90%;
+                    }
+                }
+            }
+        }
+
+        .ProjectThumbnail_figure {
+            width: 70%;
+            margin-left: 50px;
+
+            @include media("<laptop") {
+                width: 100%;
+                margin: 0;
+            }
+
+            video {
+                box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+                width: 100%;
+            }
+        }
+    }
+}
