--- a/src/components/Pages/VignetteResponsive/VignetteResponsive.scss
+++ b/src/components/Pages/VignetteResponsive/VignetteResponsive.scss
@@ -5,7 +5,7 @@
     padding: 100px 0 0;
 
     h1 {
-        font-family: "Public Sans - Thin _ Regular";
+        font-family: "Public_Sans-Thin_Regular";
         line-height: 52px;
         font-size: 42px;
         margin-bottom: 30px;
@@ -19,7 +19,7 @@
     }
 
     h2 {
-        font-family: "Public Sans - Thin _ Regular";
+        font-family: "Public_Sans-Thin_Regular";
         font-size: 22px;
         text-align: center;
 
