logo align left responsive

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -38,6 +38,7 @@
             align-self: center;
 
             @include media("<laptop") {
+                text-align: left;
                 padding: 0;
             }
 
