implementation et responsive section video avec parallax

--- a/src/components/Pages/Projects/Projects.scss
+++ b/src/components/Pages/Projects/Projects.scss
@@ -11,5 +11,9 @@
         padding-top: 130px;
     }
 
+    @include media("<tablet") {
+        padding-bottom: 0px;
+    }
+
     @import "./Realisations/Realisations.scss";
 }
