--- a/src/components/Pages/About/About.scss
+++ b/src/components/Pages/About/About.scss
@@ -16,7 +16,7 @@
 
     @include media("<mobileXL") {
         overflow: hidden;
-        margin-top: -400px;
+        // margin-top: -400px;
         // margin-bottom: -405px;
     }
 
