--- a/src/components/Pages/About/About.scss
+++ b/src/components/Pages/About/About.scss
@@ -14,6 +14,10 @@
         // margin-bottom: -220px;
     }
 
+    @include media("<tablet") {
+        margin-top: 0px;
+    }
+
     @include media("<mobileXL") {
         overflow: hidden;
         // margin-top: -400px;
