--- a/src/components/Pages/Projects/Realisations/Realisations.scss
+++ b/src/components/Pages/Projects/Realisations/Realisations.scss
@@ -1,143 +1,143 @@
+// .realisations { // OLD
+//     grid-row: 2;
+//     grid-column: 1/ 23;
+//     display: flex;
+//     flex-wrap: wrap;
+//     justify-content: center;
+//     grid-gap: 26px;
+//     margin: 30px auto;
+//     max-width: 1475px;
+
+//     li {
+//         @include media("<laptop") {
+//             width: 45%;
+//         }
+
+//         @include media("<tablet") {
+//             width: 100%;
+//         }
+
+//         figure {
+//             width: 400px;
+//             overflow: hidden;
+//             position: relative;
+//             display: grid;
+//             height: 400px;
+
+//             @include media("<laptop") {
+//                 width: 100%;
+//                 height: 370px;
+//             }
+
+//             @include media("<tablet") {
+//                 width: 320px;
+//                 margin: auto;
+//             }
+
+//             &:hover {
+//                 img {
+//                     transform: scale(1.6) translate(35px, 23px);
+//                 }
+
+//                 figcaption {
+//                     background-color: $primary;
+
+//                     p {
+//                         color: #fff !important;
+
+//                         &:nth-child(1) {
+//                             &::after {
+//                                 border-color: transparent transparent $primary transparent;
+//                             }
+//                         }
+//                     }
+//                 }
+//             }
+
+//             img {
+//                 width: 100%;
+//                 height: auto;
+//                 position: absolute;
+//                 transition: all 1.5s;
+//                 margin: 0;
+//             }
+
+//             figcaption {
+//                 height: 150px;
+//                 background-color: #ebebec;
+//                 position: relative;
+//                 transition: all 0.3s;
+//                 align-self: end;
+
+//                 @include media("<=tablet") {
+//                     padding: 5px;
+//                 }
+
+//                 p {
+//                     padding: 20px;
+//                     transition: all 0.3s;
+
+//                     @include media("<=tablet") {
+//                         padding: 15px;
+//                     }
+
+//                     &:nth-child(1) {
+//                         font-weight: 700;
+//                         text-transform: uppercase;
+//                         position: relative;
+//                         font-size: 20px;
+
+//                         @include media("<laptop") {
+//                             font-size: 18px;
+//                             letter-spacing: 0.1em;
+//                         }
+
+//                         &::before {
+//                             content: "";
+//                             position: absolute;
+//                             height: 5px;
+//                             width: 30px;
+//                             background-color: $secondary;
+//                             bottom: -2px;
+
+//                             @include media("<=tablet") {
+//                                 height: 2px;
+//                             }
+//                         }
+
+//                         &::after {
+//                             content: "";
+//                             position: absolute;
+//                             left: 21px;
+//                             top: -14px;
+//                             width: 0;
+//                             height: 0;
+//                             border-style: solid;
+//                             border-width: 0 7px 16px 7px;
+//                             border-color: transparent transparent #ebebec transparent;
+//                             transition: all 0.3s;
+
+//                             @include media("<laptop") {
+//                                 top: -20px;
+//                             }
+//                         }
+//                     }
+
+//                     &:nth-child(2) {
+//                         font-size: 18px;
+//                         color: $grey2;
+
+//                         @include media("<laptop") {
+//                             font-size: 14px;
+//                         }
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
+
 .realisations {
-    grid-row: 2;
-    grid-column: 1/ 23;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    grid-gap: 26px;
-    margin: 30px auto;
-    max-width: 1475px;
-
-    li {
-        @include media("<laptop") {
-            width: 45%;
-        }
-
-        @include media("<tablet") {
-            width: 100%;
-        }
-
-        figure {
-            width: 400px;
-            overflow: hidden;
-            position: relative;
-            display: grid;
-            height: 400px;
-
-            @include media("<laptop") {
-                width: 100%;
-                height: 370px;
-            }
-
-            @include media("<tablet") {
-                width: 320px;
-                margin: auto;
-            }
-
-            &:hover {
-                img {
-                    transform: scale(1.6) translate(35px, 23px);
-                }
-
-                figcaption {
-                    background-color: $primary;
-
-                    p {
-                        color: #fff !important;
-
-                        &:nth-child(1) {
-                            &::after {
-                                border-color: transparent transparent $primary transparent;
-                            }
-                        }
-                    }
-                }
-            }
-
-            img {
-                width: 100%;
-                height: auto;
-                position: absolute;
-                transition: all 1.5s;
-                margin: 0;
-            }
-
-            figcaption {
-                height: 150px;
-                background-color: #ebebec;
-                position: relative;
-                transition: all 0.3s;
-                align-self: end;
-
-                @include media("<=tablet") {
-                    padding: 5px;
-                }
-
-                p {
-                    padding: 20px;
-                    transition: all 0.3s;
-
-                    @include media("<=tablet") {
-                        padding: 15px;
-                    }
-
-                    &:nth-child(1) {
-                        font-weight: 700;
-                        text-transform: uppercase;
-                        position: relative;
-                        font-size: 20px;
-
-                        @include media("<laptop") {
-                            font-size: 18px;
-                            letter-spacing: 0.1em;
-                        }
-
-                        &::before {
-                            content: "";
-                            position: absolute;
-                            height: 5px;
-                            width: 30px;
-                            background-color: $secondary;
-                            bottom: -2px;
-
-                            @include media("<=tablet") {
-                                height: 2px;
-                            }
-                        }
-
-                        &::after {
-                            content: "";
-                            position: absolute;
-                            left: 21px;
-                            top: -14px;
-                            width: 0;
-                            height: 0;
-                            border-style: solid;
-                            border-width: 0 7px 16px 7px;
-                            border-color: transparent transparent #ebebec transparent;
-                            transition: all 0.3s;
-
-                            @include media("<laptop") {
-                                top: -20px;
-                            }
-                        }
-                    }
-
-                    &:nth-child(2) {
-                        font-size: 18px;
-                        color: $grey2;
-
-                        @include media("<laptop") {
-                            font-size: 14px;
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
-
-.realisationsTest {
     grid-row: 2;
     grid-column: 1/ 23;
 
